Fix modal on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -338,6 +338,7 @@ nav {
   width: 50%;
   height: 100%;
   overflow: hidden;
+  z-index: 10;
   // border-radius: 50px;
 }
 
@@ -488,6 +489,10 @@ nav {
 }
 
 @media screen and (max-width: 768px) {
+  .home-inner {
+    top: 40%;
+  }
+
   h1 {
     font-size: 1.5rem;
   }
@@ -654,5 +659,10 @@ nav {
   #contact i {
     font-size: 4rem;
     padding: 20px;
+  }
+
+  #myPhone {
+    width: auto;
+    height: auto;
   }
 }
